--- a/src/app/components/user/user/user3.component.html
+++ b/src/app/components/user/user/user3.component.html
@@ -93,9 +93,9 @@
 							<div class="dashboard-body">
 								<div class="dashboard-caption">
 								
-									<div class="dashboard-caption-header">
+									<!-- <div class="dashboard-caption-header">
 										<div class="col-md-6"><h4><i class="ti-user"></i>Activities</h4></div>
-									</div>
+									</div> -->
 									
 									<app-post [userId]="profileUserId" [requestedBy]="loggedUser.username" [selfActivities]=true [disableNewPost]=true ></app-post>
 
