--- a/src/app/components/post/newpost/newpost.component.html
+++ b/src/app/components/post/newpost/newpost.component.html
@@ -36,17 +36,17 @@
 -->
 
 <div class="card gedf-card">
-    <div class="card-header">
+    <!-- <div class="card-header">
         <ul class="nav nav-tabs card-header-tabs" id="myTab" role="tablist">
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link active" id="posts-tab" data-toggle="tab" href="#posts" role="tab"
                    aria-controls="posts" aria-selected="true">New Post</a>
             </li>
         </ul>
-    </div>
+    </div> -->
     <div class="card-body">
-        <div class="tab-content" id="myTabContent">
-            <div class="tab-pane fade show active" id="posts" role="tabpanel" aria-labelledby="posts-tab">
+        <!-- <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="posts" role="tabpanel" aria-labelledby="posts-tab"> -->
                 <div class="form-group">
                     <label class="sr-only" for="message">post</label>
 
@@ -96,8 +96,8 @@
                     </div>
                 </div>
 
-            </div>
-        </div>
+            <!-- </div>
+        </div> -->
         <div class="image-upload-container" *ngIf="stagingImage && stagingImage != null">
             <div class="file-container">
             <!-- <button class="delete-image" type="button" (click)="deleteAttachedFile($event)"> <i class="fa fa-times" aria-hidden="true"></i></button> -->
