--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,7 +9,6 @@ body {
     /* background: #edf2f6 !important; */
     background: #fff !important;
 }
-
 .nav-link, .text-center {
     text-align: center;
 }
@@ -42,7 +41,7 @@ a {
     display: block;
 }
 .dropdown{
-  margin-left: 10px;
+  margin: auto;
 }
 
 .mylogo {
@@ -69,9 +68,9 @@ a {
 }*/
 
 .simplelogo {
-    height: 50px;
-    width: 55px;
-    background-size: 50px 43px;
+    height: 40px;
+    width: 40px;
+    background-size: 40px 40px;
     background-image: url('../assets/images/gpx-logo-default-sm.png');
     background-repeat: no-repeat;
     background-position: center center;
@@ -288,7 +287,7 @@ div#v-pills-tab a {
         flex-direction: column;
         padding-left: 0;
         align-items: flex-start;
-        /* margin-bottom: 0; */
+        margin: auto;
         list-style: none;
     }
     .nav-link {
@@ -299,7 +298,7 @@ div#v-pills-tab a {
         padding: 5px;
     }
     .create-page-button-custom-position{
-        position: absolute;
+        /* position: absolute; */
         width: 90%;
         bottom: 50%;
     }
