--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,7 +42,7 @@
             <li class="nav-item">
               <a class="nav-link" (click)="hideNav()" [ngClass]="{'active': activeTab=='circle'}"  routerLink="circle" routerLinkActive="active">
                 <i class="fa fa-user"></i>
-                <div>Circle</div>
+                Circle
               </a>
           </li>
           <li class="nav-item">
