--- a/src/styles.css
+++ b/src/styles.css
@@ -55,6 +55,7 @@ Last change:  4/september/18
 html, body {
     /* font-family: "Muli", "Segoe Ui"; */
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    font-size: 14px;
 }
 
 /*
