new UI design changes

--- a/src/app/components/post/postcard/postcard.component.html
+++ b/src/app/components/post/postcard/postcard.component.html
@@ -57,7 +57,7 @@
 
 
         <div *ngIf="post && post['containsImage']" class="cardbox-item">
-            <img class="img-fluid" [src]="postImage" alt="">
+            <img class="img-fluid" height="500px" width="500px" [src]="postImage" alt="">
         </div>
 
         <div *ngIf="post && post['containsVideo']" class="cardbox-item">
