--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -7,8 +7,8 @@
 
         </div>
 
-        <div *ngIf="posts.length > 0">
-            <cdk-virtual-scroll-viewport style="height: 550px" class="all-posts" itemSize="90" (scroll)="onPostScroll($event)">
+        <div *ngIf="posts.length > 0" class="cdk-virtual-scroll-data-source">
+            <cdk-virtual-scroll-viewport class="all-posts" itemSize="90" (scroll)="onPostScroll($event)">
                 <app-postcard  *ngFor="let post of posts; let i = index" [post]="post" [isComment]="false" [idx]="i" [selfActivities]="selfActivities">
                 </app-postcard>
             </cdk-virtual-scroll-viewport>
