--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -92,7 +92,7 @@ a {
     .routlet .container-fluid {
     width: 90%;
     margin: 0 auto;
-    margin-top: 30%;
+ /* margin-top: 30%; */
 
     }
 }
@@ -258,7 +258,7 @@ div#v-pills-tab a {
     .routlet .container-fluid {
         width: 90%;
         margin: 0 auto;
-        margin-top: 5%;
+        /* margin-top: 5%; */
     
     }
     .notify-button{
@@ -301,6 +301,7 @@ div#v-pills-tab a {
         /* position: absolute; */
         width: 90%;
         bottom: 50%;
+        padding: 15px 2px 15px 0px;
     }
     .create-page-button-custom-position button{
         width: 100%;
