--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -258,7 +258,7 @@ div#v-pills-tab a {
     .routlet .container-fluid {
         width: 90%;
         margin: 0 auto;
-        /* margin-top: 5%; */
+        margin-top: 5%;
     
     }
     .notify-button{
