--- a/src/app/components/user/user/user.component.css
+++ b/src/app/components/user/user/user.component.css
@@ -11469,7 +11469,7 @@ a.cl-box.pink {
 	width: 100%;
 	/*padding: 2rem;*/
 	text-align: center;
-	margin-top: 5%;
+	/* margin-top: 5%; */
 	background: url(/assets/images/network7.png);
 	min-height: 270px;
     }
