Modal popup implementation

--- a/src/app/components/searchlegislators/searchlegislators.component.html
+++ b/src/app/components/searchlegislators/searchlegislators.component.html
@@ -83,6 +83,7 @@
     </div>
     <div *ngIf="divisionOffices && divisionOffices.length === 0">
       Relevant data not available.
+      <button (click)="openDialog()">click</button>
     </div>
   </div>
 
