--- a/src/styles.css
+++ b/src/styles.css
@@ -10460,3 +10460,6 @@ input{
     display: inline-block !important;
     width: 500px !important;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.modal-dialog{ overflow: auto;}
