--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav id="navbar" class="navbar navbar-expand-lg navbar-light fixed-top">
   <div class="container-fluid">
-      <a [ngClass]="{'navbar-brand mylogo':!isMobile , 'navbar-brand simplelogo':isMobile}" (click)="hideNav()" routerLink="/"></a>
+      <a [ngClass]="{'navbar-brand mylogoLg':!isMobile , 'navbar-brand simplelogo':isMobile}" (click)="hideNav()" routerLink="/"></a>
 
       <!-- 
         For Expand search bar
